--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <script src="./js/pixi.min.js"></script>
 <script src="./js/tween.min.js"></script>
 <script src="./js/data.js"></script>
-<script src="./js/main.js"></script>
+<script src="./js/main.min.js"></script>
 <script>
     var _mtac = {};
     (function() {
