--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     var _mtac = {};
     (function() {
         var mta = document.createElement("script");
-        mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
+        mta.src = location.protocol + "//pingjs.qq.com/h5/stats.js?v2.0.2";
         mta.setAttribute("name", "MTAH5");
         mta.setAttribute("sid", "500617297");
         var s = document.getElementsByTagName("script")[0];
