--- a/index.html
+++ b/index.html
@@ -10,15 +10,26 @@
 </head>
 <body>
 <div class="main_layer" id="main_layer">
-
-    <!-- 欢迎页模块 -->
-    <div class="welcome_layer">
-        <div class="brand"></div>
+    <!-- 首页模块 -->
+    <div class="welcome_layer first_page" id="firstPage">
+        <div class="brand center_img"><img src="./images/white-brand.png"></div>
         <div class="wel_main_wraper">
             <div class="wel_main">
-                <div class="table-cell slogan"><i></i></div>
-                <div class="table-cell sofa_ball"><img src="./images/zq.gif" alt=""></div>
-                <div class="table-cell text"><i></i></div>
+                <div class="slide_up"><img src="./images/home-1.png" class="home1"><i></i><span><b></b></span></div>
+                <div class="center_img"><img src="./images/home-2.png" class="home2"></div>
+                <div class="center_img"><img src="./images/home-3.png" class="home3"></div>
+            </div>
+        </div>
+        <div class="bottom-text">世界杯期间凡比利时队进球晋级，长虹CHiQ电视活动产品相应减价打折。</div>
+    </div>
+
+    <!-- 欢迎页模块 -->
+    <div class="welcome_layer" id="welcomePage" style="display: none;">
+        <div class="brand"><i></i></div>
+        <div class="wel_main_wraper">
+            <div class="wel_main">
+                <div class="text"><i></i></div>
+                <div class="sofa_ball"><img src="./images/zq.gif" alt=""></div>
             </div>
         </div>
         <div class="start"></div>
@@ -282,6 +293,22 @@
                                     <div class="item_bg"></div>
                                     <div class="item_text"></div>
                                 </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
                             </ul>
                         </div>
                         <div class="category_item flag">
@@ -330,6 +357,62 @@
                         </div>
                         <div class="category_item others">
                             <ul>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
+                                <li>
+                                    <div class="item_bg"></div>
+                                    <div class="item_text"></div>
+                                </li>
                                 <li>
                                     <div class="item_bg"></div>
                                     <div class="item_text"></div>
