调节衣服尺寸

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     <!--哭脸-->
     <div id="float-cry"
          style="display: none;position: absolute;margin: auto;left:0;right: 0;top:0;bottom: 0;width: 133px;height: 133px;z-index: 999">
-        <img src="images/bq.gif" style="width: 132px;height: 133px;"/>
+        <img src="images/bq.gif" id="float-bq" style="width: 132px;height: 133px;"/>
+    </div>
+    <div id="float-tv"
+         style="display: none;position: absolute;margin: auto;left:0;right: 0;top:0;bottom: 0;width: 553px;height: 313px;z-index: 999">
+        <img src="images/tv.gif"  style="width: 553px;height: 313px;"/>
     </div>
     <!-- 主页 -->
     <div class="world_cup_layer">
