--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </div>
     <div id="float-tv"
          style="display: none;position: absolute;margin: auto;left:0;right: 0;top:0;bottom: 0;width: 553px;height: 313px;z-index: 999">
-        <img src="images/tvshow.gif"  style="width: 512px;height: 280px;"/>
+        <!-- <img src="images/tvshow.gif" style="width: 512px;height: 280px;"/> -->
+        <!-- <div id="imgBox"></div> -->
     </div>
     <!-- 主页 -->
     <div class="world_cup_layer">
