修改文案，图片，网页标题

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!--<meta name="msapplication-tap-highlight" content="no">-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta content="width=750,user-scalable=no" name="viewport">
-<title>世界杯</title>
+<title>看球姿势大比拼</title>
 <link href="./index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <div class="center_img"><img src="./images/home-3.png" class="home3"></div>
             </div>
         </div>
-        <div class="bottom-text">世界杯期间凡比利时队进球晋级，长虹CHiQ电视活动产品相应减价打折。</div>
+        <div class="bottom-text">世界杯期间凡比利时队进球晋级，长虹CHiQ电视相关活动产品相应减价打折。</div>
     </div>
 
     <!-- 欢迎页模块 -->
