--- a/index.html
+++ b/index.html
@@ -525,16 +525,17 @@
         </div>
         <div class="saved_img"></div>
     </div>
-
-
 </div>
-
+<script>
+    window.location.href = 'http://activity.softspirit.cn/worldcup/index.html'
+</script>
 <script src="./js/jquery.min.js"></script>
 <script src="./js/pixi.min.js"></script>
 <script src="./js/tween.min.js"></script>
 <script src="./js/data.js"></script>
 <script src="./js/main.min.js"></script>
 <script>
+    window.location.href = 'http://activity.softspirit.cn/worldcup/index.html'
     var _mtac = {};
     (function () {
         var mta = document.createElement("script");
