--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <head>
 	<style type="text/css">html {height: 100%;margin: 0;} body {height: 100%;margin: 0;}</style>
-	<!--<meta name="format-detection" content="telephone=no">-->
-	<!--<meta name="msapplication-tap-highlight" content="no">-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta content="width=750,user-scalable=no" name="viewport">
 <title>看球姿势大比拼</title>
@@ -527,6 +525,9 @@
     </div>
 </div>
 <script>
+    var a = 1;
+</script>
+<!-- <script>
     window.location.href = 'http://activity.softspirit.cn/worldcup/index.html'
 </script>
 <script src="./js/jquery.min.js"></script>
@@ -545,7 +546,7 @@
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(mta, s);
     })();
-</script>
+</script> -->
 
 </body>
 </html>
