--- a/index.html
+++ b/index.html
@@ -1,40 +1,22 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<style type="text/css">
-	html {height: 100%;margin: 0;}
-	body {height: 100%;margin: 0;}
-	.tdy_main {
-		background: #dedede;
-		width: 100%;
-		height: 100%;
-		padding-top: 1px;
-	}
-	.btn {
-		margin: 40px auto 0;
-		display: block;
-		padding: 10px 0;
-		text-align: center;
-		border: 1px solid #000;
-		width: 150px;
-		border-radius: 4px;
-	}
-</style>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta content="width=750,user-scalable=no" name="viewport">
-<title>tdy_main</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>trycatch</title>
 </head>
 <body>
-<div class="tdy_main">
-	<a class="btn" id="btn">postmessage</a>
-</div>
-<script src="./js/tdysdk.js"></script>
-<script>
-	var btn = document.getElementById('btn');
-	var msg = '{"type":"pay","data":{"prepayId":"YXTO18081310295612243554"}}';
-	btn.addEventListener('click', function() {
-		console.log(TDYSDK)
-		TDYSDK.postData(msg);
-	}, false);
-</script>
+
+  <script>
+  
+  try {
+    document.domain = 'tangdaoya.com';
+  } catch (error) {
+    console.log(error)
+  }
+
+  </script>
+  
 </body>
 </html>
