--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 
   <script>
-  
-  try {
-    document.domain = 'tangdaoya.com';
-  } catch (error) {
-    console.log(error)
-  }
+  // console.log()
+  document.domain = 'tangdaoya.com';
+  // try {
+  //   document.domain = 'tangdaoya.com';
+  // } catch (error) {
+  //   console.log(error)
+  // }
 
   </script>
   
